# LabMan

./: CMakeLists.txt  Human.material  Human.skeleton.xml  README.md  labman.blend  labman_clothed.blend  labman_clothed.blend1
LabMan/: LabMan.cpp  LabMan.h  OgreFramework.cpp  OgreFramework.h  main.cpp
MotionController/: InverseKinematics.cpp  InverseKinematics.h  Motion.cpp  Motion.h  MotionPlan.cpp  MotionPlan.h  PoseController.cpp  PoseController.h
OpenTissue/: LICENSE.txt  README.txt  configuration.h
OpenTissue/core/math/: math_basic_types.h  math_coordsys.h  math_quaternion.h  math_vector3.h
OpenTissue/kinematics/animation/: animation_keyframe_joint_channels.h
OpenTissue/kinematics/inverse/: inverse.h  inverse_bone_traits.h  inverse_compute_weighted_difference.h  inverse_make_solver.h  inverse_nonlinear_solver.h  inverse_utility_sample_motion.h
OpenTissue/kinematics/skeleton/: skeleton_bone.h  skeleton_default_bone_traits.h  skeleton_skeleton.h  skeleton_types.h
PhysicsSceneManager/: DebugDrawer.cpp  DebugDrawer.h  MeshStrider.cpp  MeshStrider.h  PhysicsListener.cpp  PhysicsListener.h  PhysicsNode.cpp  PhysicsNode.h  PhysicsResource.cpp  PhysicsResource.h  PhysicsResourceManager.cpp  PhysicsResourceManager.h  PhysicsSceneManager.cpp  PhysicsSceneManager.h  PhysicsSceneManagerPlugin.cpp  PhysicsSceneManagerPlugin.h
media/materials/scripts/: cursor.material  ground.material  labman.material  table.material  tennisball.material
media/materials/textures/: cursor.tga
media/models/: Human.mesh  Human.skeleton  LabMan.mesh  labman.skeleton  labmancol.mesh  labmancol.skeleton  labmancollefthand.mesh  labmancollefthand.skeleton  labmancolrighthand.mesh  labmancolrighthand.skeleton  table.mesh  tennisball.mesh
media/physics/: ball.physics  labman.physics  table.physics
nn_test/: main.c  nn_test.vcproj
nn_train/: main.c  nn_train.vcproj
(+2 files in other folders)
